# talk_bot

./: .env.example  .gitignore  README.md  app_run.py  platform_dependency_main.py  pyproject.toml
api/: README.md  open.py  pyproject.toml
api/api/: api.py  settings.py
api/documents/: admin.py  controllers.py  models.py  schemas.py  tests.py  views.py
api/documents/migrations/: 0001_initial.py
api/my_bot/: bot.py
app_run_config/: argument_parser_app_run.py  functions_app_run.py  platform_dependency_app_run.py
app_run_config/test/: test_app_run.py
audio_bot/: README.md  pyproject.toml
audio_bot/audio_config/: main.py
discord_bot/: pyproject.toml
discord_bot/bot_config/: bot.py
gui/: README.md  pyproject.toml
gui/gui_config/: README.md  commands.txt  demofile.txt  main.py  ps_manager.py
gui/gui_config/user_controls/: app_bar.py
gui/gui_config/views/: FletRouter.py  add_command_view.py  add_ps_view.py  index_view.py  list_commands_view.py  ps_manager.py  settings_view.py
my_bot/: README.md  pyproject.toml
my_bot/bot_config/: bot.py
playground/: Introduction.md  README.md  my_dotenv.py  terminal_comand.py  test.py
playground/Simplebott/: bot.py  bot_playground.py  discord_bot1.yml  message.txt  test.py
playground/Simplebott/.git.example/: COMMIT_EDITMSG  config  index  packed-refs
playground/Simplebott/.git.example/logs/: HEAD
playground/Simplebott/.git.example/logs/refs/heads/: playground
playground/Simplebott/.git.example/logs/refs/remotes/origin/: HEAD  playground
playground/Simplebott/.git.example/objects/pack/: pack-283a35dd53ed47aaacc69a48bd5e03407f073268.idx  pack-283a35dd53ed47aaacc69a48bd5e03407f073268.pack  pack-283a35dd53ed47aaacc69a48bd5e03407f073268.rev
playground/Simplebott/.git.example/refs/heads/: main
playground/Simplebott/.git.example/refs/remotes/origin/: playground
playground/Simplebott/ffmpeg/: info.md
playground/Simplebott/saves/: bot_copy1.py  bot_copy2.py  bot_music_working.py  bot_open_end_close_after_ask.py  bot_oryg.py
playground/my_bot/: bot.py  pyproject.toml
playground/my_bot/bot_config/: main.py
playground/pexpect_wexpect_test/: pexpect_test.py  wexpect_test.py
raport/: raport.aux  raport.out  raport.tex
raport/.auctex-auto/: raport.el
