[tool.poetry]
name = "gui"
version = "0.1.0"
description = "Graphical User Interface for listing and adding active syssses"
authors = ["sand194 <piasekj1602@gmail.com>"]
readme = "README.md"
packages = [{include = "gui_config"}]

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.22.0"
black = "^24.4.0"
ruff = "^0.4.1"
pyautogui = "^0.9.54"
psutil = "^5.9.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
